feat: Compatible with Google colab

--- a/Verne_text_generation_using_RNN.ipynb
+++ b/Verne_text_generation_using_RNN.ipynb
@@ -1276,17 +1276,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 309ms/step\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_3\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_7\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_3\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_7\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1298,11 +1305,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_3 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)         │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">256</span>)         │        <span style=\"color: #00af00; text-decoration-color: #00af00\">30,464</span> │\n",
+       "│ embedding_7 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)         │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">256</span>)            │        <span style=\"color: #00af00; text-decoration-color: #00af00\">30,464</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ gru_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">GRU</span>)                     │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1024</span>)        │     <span style=\"color: #00af00; text-decoration-color: #00af00\">3,938,304</span> │\n",
+       "│ gru_5 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">GRU</span>)                     │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1024</span>)           │     <span style=\"color: #00af00; text-decoration-color: #00af00\">3,938,304</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">119</span>)         │       <span style=\"color: #00af00; text-decoration-color: #00af00\">121,975</span> │\n",
+       "│ dense_5 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">119</span>)            │       <span style=\"color: #00af00; text-decoration-color: #00af00\">121,975</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -1310,11 +1317,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_3 (\u001b[38;5;33mEmbedding\u001b[0m)         │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m256\u001b[0m)         │        \u001b[38;5;34m30,464\u001b[0m │\n",
+       "│ embedding_7 (\u001b[38;5;33mEmbedding\u001b[0m)         │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m256\u001b[0m)            │        \u001b[38;5;34m30,464\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ gru_1 (\u001b[38;5;33mGRU\u001b[0m)                     │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1024\u001b[0m)        │     \u001b[38;5;34m3,938,304\u001b[0m │\n",
+       "│ gru_5 (\u001b[38;5;33mGRU\u001b[0m)                     │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1024\u001b[0m)           │     \u001b[38;5;34m3,938,304\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m119\u001b[0m)         │       \u001b[38;5;34m121,975\u001b[0m │\n",
+       "│ dense_5 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m119\u001b[0m)            │       \u001b[38;5;34m121,975\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -1364,30 +1371,32 @@
    "source": [
     "simplified_batch_size = 1\n",
     "model = build_model(vocab_size, embedding_dim, rnn_units, batch_size=1)\n",
-    "model.build(tf.TensorShape([simplified_batch_size, None]))\n",
+    "model.predict(tf.ones([simplified_batch_size, simplified_batch_size]))\n",
     "model.load_weights('./training_checkpoints/ckpt_40.weights.h5')\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A holdra úgy jutunk el, hogy minden nehézséget állított elő - folytatta Barbicane -, miután a torkok számára. Ezek a térképek megközelítőerejének ellen a lövedék kilövésénél, de addig szó sem lehet ilyen tárgyak esése azonban s a tömegek kívánsága.\n",
-      "S a tömeg egy\n",
-      "egyszerre két tengert is megérteni az űrben ment végbe, ahol a levegő molekuláit semmi sem tartaná az állapotában. Ez a férfiaké. Latona és Jupiter e\n",
-      "leárnyala izgalmas pillanatában keletkező lökést. Mert éppenséggel\n",
-      "nem mindegy, hogy a lövedék már csak egy meteort a világűr magassága a\n",
-      "megfigyeléseket.\n",
-      "A megfigyelők szeme előtt ismét feltűnt a holdtányér egyik szélétől a másikig\n",
-      "követhette volna. Barbicane elnök elgondolása kezdetben helyes magassága ezáltal is megérzik, mert a vonatok az olvasztott fémnek kellett kitölteni, amelyek a bolygók közé, a Herschel-földek itt kellett kikeresni egy pontot, ahol a két égitest vonzóereje\n",
-      "kiegyenlítődik, a lövedék kilövésénél, de addig szó sem jutott társainkat, mint az északi sarkig terjed. A Hold szerep-\n",
-      "hely fö\n"
+      "A holdra úgy jutunk el, hogy a műszerben levő higany\n",
+      "leszálljon az űr hőmérsékletére. A mozdony szemébe néztek. Minden fény percben makacsul számításaik az okos jellegét felismerhetik a megfelelő helyet.\n",
+      "- Igen, a tyúkok.\n",
+      "Szépszerűségtelen.\n",
+      "- Nos, kérem! Minthogy a mi határaink nem tér vissza a mi járművünkhöz. Lesznek önök azért semmit, de még egy sereg még mindig erre az útra? - tért Barbicane egyenesen a tárgyra.\n",
+      "- Igen, ez megmásíthatatlan elhatározásokat. Most már megtudták,\n",
+      "hogy a tengelye körüli forgási idejel a történetet is a középkor legendái közé, a semleges ponton innen a Föld vonzása sem hozták. Ha egy tárgy volt még hátra! - felelte Michel.\n",
+      "- Arról van szó - folytatta Barbicane - papírt, ceruzát ide, s fél órán belül megtalálom a kíváncsiak óriási erők működése hozta őket.\n",
+      "- Majd egy embert látok között járunk...\n",
+      "- Alighanem elkéstünk! - jajdult fel Maston szenvedélye ragadta el a lobba-\n",
+      "nékony titkárt. százszor is elismételhetetlen volt ez az ellenfelének.\n",
+      "- Ez aztán a Barbicane elnök, Elphiston őr\n"
      ]
     }
    ],
