--- a/text_classification_from_scratch.ipynb
+++ b/text_classification_from_scratch.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/gitaroktato/deep-learning-exercises/blob/text_classification_simple/text_classification_from_scratch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "euN_yFkMEbef"
       },
       "source": [
@@ -80,11 +70,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "qikGdtC4Ebeh",
-        "outputId": "bd15b3b9-b59a-44bb-b2e7-effe3779cf63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qikGdtC4Ebeh",
+        "outputId": "bd15b3b9-b59a-44bb-b2e7-effe3779cf63"
       },
       "outputs": [
         {
@@ -115,11 +105,11 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "zRcEsUefEbej",
-        "outputId": "86511dd8-a754-47b6-c4f8-fd61a8430f5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zRcEsUefEbej",
+        "outputId": "86511dd8-a754-47b6-c4f8-fd61a8430f5f"
       },
       "outputs": [
         {
@@ -138,11 +128,11 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "4Mt0lZETEbej",
-        "outputId": "4d0a18e7-3cba-4435-f780-98fdb06215ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4Mt0lZETEbej",
+        "outputId": "4d0a18e7-3cba-4435-f780-98fdb06215ec"
       },
       "outputs": [
         {
@@ -161,11 +151,11 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "BvpU3MI_Ebek",
-        "outputId": "6270ec84-bac4-4bab-8dee-6868c888393d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BvpU3MI_Ebek",
+        "outputId": "6270ec84-bac4-4bab-8dee-6868c888393d"
       },
       "outputs": [
         {
@@ -194,11 +184,11 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "0RyBb-2nEbem",
-        "outputId": "fc241641-4339-4b3b-c570-4671bf9a843b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0RyBb-2nEbem",
+        "outputId": "fc241641-4339-4b3b-c570-4671bf9a843b"
       },
       "outputs": [
         {
@@ -263,11 +253,11 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "xssXV7r7Ebem",
-        "outputId": "ec448eed-2bf2-45f4-b92d-41e6be9bb7eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xssXV7r7Ebem",
+        "outputId": "ec448eed-2bf2-45f4-b92d-41e6be9bb7eb"
       },
       "outputs": [
         {
@@ -325,11 +315,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "fmhNsbbiFY69",
-        "outputId": "e863c47a-0cf5-4f6c-ef81-4199308ddb5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fmhNsbbiFY69",
+        "outputId": "e863c47a-0cf5-4f6c-ef81-4199308ddb5c"
       },
       "execution_count": 31,
       "outputs": [
@@ -367,11 +357,11 @@
       "cell_type": "code",
       "execution_count": 32,
       "metadata": {
-        "id": "G1k1gsH6Eben",
-        "outputId": "048745e9-02fe-4dcf-cc74-e8f784596c2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G1k1gsH6Eben",
+        "outputId": "048745e9-02fe-4dcf-cc74-e8f784596c2f"
       },
       "outputs": [
         {
@@ -478,6 +468,7 @@
         "    output_mode=\"int\",\n",
         "    output_sequence_length=12,\n",
         ")\n",
+        "# Create a vocabulary. See here: https://www.tensorflow.org/api_docs/python/tf/keras/layers/TextVectorization#adapt\n",
         "vectorize_layer_smaller.adapt(text_ds)\n",
         "# Comparing two sentences\n",
         "vector_first = vectorize_layer_smaller(\"Hello world! This is a sample text.\")\n",
@@ -487,11 +478,11 @@
         "print('Diff: ', vector_second - vector_first)"
       ],
       "metadata": {
-        "id": "hXRQOMD4MiLc",
-        "outputId": "a0e8a210-9838-4f13-e24b-96fc37292900",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hXRQOMD4MiLc",
+        "outputId": "a0e8a210-9838-4f13-e24b-96fc37292900"
       },
       "execution_count": 42,
       "outputs": [
@@ -561,7 +552,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Understanding `vectorize_text` and `expand_dims`\n",
+        "texts, labels = next(iter(raw_train_ds.take(1)))\n",
+        "print('Original shape: ', texts.shape)\n",
+        "print('New shape: ', tf.expand_dims(texts, -1).shape)\n",
+        "print('Expansion smaple: ', tf.expand_dims(texts, -1)[0][0])"
+      ],
+      "metadata": {
+        "id": "OhE30p6SP4fe",
+        "outputId": "aee7dd01-e1fc-4097-f39d-6f6a7ae9b32a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original shape:  (32,)\n",
+            "New shape:  (32, 1)\n",
+            "Expansion smaple:  tf.Tensor(b\"OK Hollywood is not liberal.<br /><br />Obviously I'm lieing because it is. Im a conservative but the politics i will leave out of my opinion of the movie. This movie was anti bush, anti middle east , anti big oil propaganda but that is not why it was bad.<br /><br />Fist off i will give credit where credit is due. i saw this film opening night because i happen to like these kinds of films and am a political science major in collage. The cinematography was excellent and the acting was as far as i could tell very good.<br /><br />The plot was impossible for me to decode however. I have been tested and have an IQ of 138 but no matter how hard i tried there was no way i could piece together the story line of the movie and what characters where doing what.<br /><br />The story and scene sequence was totally incoherent and poorly organized.<br /><br />Unless this is one of those movies that is meant to be watch many times to get the full depth pf the story, which it very well may be, i have no idea exactly what was going on.<br /><br />Which makes sense because if you want to make a political argument and not receive any criticism then make your argument impossible to critique! If you cant dazzle them with brilliance, then baffle them with Bull S.\", shape=(), dtype=string)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
       "metadata": {
         "id": "X6Wv9OE1Ebeo"
       },
@@ -582,6 +602,75 @@
         "train_ds = train_ds.cache().prefetch(buffer_size=10)\n",
         "val_ds = val_ds.cache().prefetch(buffer_size=10)\n",
         "test_ds = test_ds.cache().prefetch(buffer_size=10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Understanding `vectorize_text` and `expand_dims`\n",
+        "texts, labels = next(iter(train_ds.take(1)))\n",
+        "print('New shape: ', texts.shape)\n",
+        "print('Vectorized expansion sample: ', texts[0])"
+      ],
+      "metadata": {
+        "id": "Pn63ol3qQnKc",
+        "outputId": "ceced612-7b67-40e0-df9b-5f4893033c52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "New shape:  (32, 500)\n",
+            "Vectorized expansion sample:  tf.Tensor(\n",
+            "[  141     8     2   255     5     2   200  1174  1395     2     1   971\n",
+            "  4126    67    90    49   163    31   313   570  1307  3192    14     4\n",
+            "  9098     8     2  2012   182     2  3033    65    11    75   971     2\n",
+            "    19     2   171     5     1    59    25    75   398    15  1378  6443\n",
+            "    23  1173  1906     8    16    31     2    81  1813  2360    59    25\n",
+            "    75   154  1307    65    46     5     2   165   426     8     2  6830\n",
+            "  3132    80    16  3723 10283  3723 10283    13    23    87  4469   975\n",
+            "   721    20     2   276    26   116   724    95    16    39    18     7\n",
+            "    60    10    28   115  1050     5    93  1377 10283     3    39   653\n",
+            "     1     1   656  1307   141     8     2   255    50    26    13     4\n",
+            "  2595  1870     8   158   764     8   186     1   653    13  6588    49\n",
+            "   461  1369  4470   141    91    11   102    60  2653  7790    13   490\n",
+            "     6  1616   127   104    33   313     8     4   173     5     1     8\n",
+            " 13635    20     2  6761  1307     8     2  6830  3132    13  1080    18\n",
+            "    31     2    81  1723    67   313    14    73    37   154  3406    45\n",
+            "    18    44    22    68  1712  1307    70   489    27   310     4   470\n",
+            "    19    36  8308  9067     2   110     7   179   589     4   131     3\n",
+            "   246   781     8     4  2710  1130     8 12788    89    76   346     8\n",
+            "   414    18     9   181    12    34    24  2731    20     4 18027    16\n",
+            "    46  8963 10221    61   477    45     6    27   249    81    80 12701\n",
+            "  1218  1949  2861  1307  8361     5     1    16    23   317   148     2\n",
+            "   779    24   470     3  1218  1949 16037    36    23   630 14593  1303\n",
+            "     2   106  1723    35   206   127   113    24  3503 19333     3  2188\n",
+            " 14822 19333    43    55   505   374     8     2    19    50    26   294\n",
+            "   127   100  1949   502  2102    78    15  4612    26   155   295    52\n",
+            " 11299     3  2188 14822    35     7   203    49     7    41    84    14\n",
+            "     2     1   111 10555    35     7  1284  5388    56     6  1218  1949\n",
+            "    22    63   786    78    38    12   197   624    99   105    38 14822\n",
+            "     8   144   117    35    24    30  1064  2452  3341   634     4   255\n",
+            "   606    12     9  4328   127     4    49   820     5     2    58     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "     0     0     0     0     0     0     0     0], shape=(500,), dtype=int64)\n"
+          ]
+        }
       ]
     },
     {
@@ -714,8 +803,7 @@
     "accelerator": "GPU",
     "colab": {
       "name": "text_classification_from_scratch",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
